[package]
name = "chainforest"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p = { version = "0.31", features = ["tcp-tokio", "mdns-tokio"] }
tokio = { package = "tokio", version = "0.3", features = ["io-util", "io-std", "stream", "macros", "rt", "rt-multi-thread", "fs", "time", "sync"] }
serde = { version = "=1.0", features = ["derive"] }
serde_json = "1.0" 
once_cell = "1.5"
log = "0.4"
uuid = { version = "0.8", features = ["serde", "v4"] }
chrono = "0.4"
lazy_static = "1.4.0"
configparser = "2.1.0"
crypto-hash = "0.3.4"
rocksdb = "0.17.0"
bytes = "0.5.2"
env_logger = "0.7.1"
json = "0.12"
local-ip-address = "0.4.4"
futures = "0.3.17"
tower-web = "0.3.7"

[target.'cfg(windows)'.dependencies]
ipconfig = "0.2.2"